# caption_editor

./: .envrc  .gitignore  .ncurc.json  .npmrc  CLAUDE.md  Claude.md  DRAG_DROP_IMPLEMENTATION.md  ELECTRON.md  ELECTRON_IMPLEMENTATION.md  IMMUTABILITY_ANALYSIS.md  IMMUTABILITY_CODE_EXAMPLES.md  IMMUTABILITY_INDEX.md  IMMUTABILITY_QUICK_REFERENCE.md  IMMUTABILITY_SUMMARY.txt  IMMUTABILITY_VISUAL_GUIDE.txt  LICENSE.txt  OSR_us_000_0010_8k.vtt  PARAKEET_INTEGRATION.md  QUICKSTART.md  README.md  README_IMMUTABILITY_ANALYSIS.md  TEST_TIMING_REPORT.md  TEST_TIMING_SUMMARY.txt  TODO.md  conftest.py  electron-builder.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.electron.config.ts  test-drag-drop.sh  tsconfig.json  vite.config.ts  vite.electron.config.ts
.beads/: issues.jsonl
.devcontainer/: Dockerfile  devcontainer.json  start-xvfb.sh  torchcodec-0.9.0a0-cp312-cp312-linux_aarch64.whl
.github/workflows/: release.yml  uvx-artifact.yml
assets/packaging/: entitlements.mac.plist  icon.icns
bug-reports/minimal-repro/: .gitignore  README.md  electron-only-test.js  index.html  main.js  package-lock.json  package.json  playwright.config.js  test.spec.js
docs/: macos-release-build.md
electron/: constants.ts  main.ts  overrides.txt  preload.ts
hack/dragndrop2/: RESULT.md  STATUS.md  package-lock.json  playwright.config.js  renderer.html  test.spec.js
patches/: @electron+notarize+2.5.0.patch
prototypes/dragndrop/: FINDINGS.md  README.md  index.html  main.js  package-lock.json  package.json  preload.js  test-file-2.vtt  test.spec.js
prototypes/dragndrop2/: main.js  package.json  preload.js  test.spec.js
python/diarization/: README.md  TORCHCODEC_BUILD.md  pyproject.toml
python/diarization/diarization/: __init__.py  cli.py
python/diarization/tests/: __init__.py  test_diarization.py
scripts/: build-released-app.sh  dev-electron.sh  kill-electron.sh  package-for-uvx.sh  pre-commit  run-all-tests.sh  setup-hooks.sh  test-drag-drop.sh
src/: App.vue  main.ts  style.css  test-setup.ts  vite-env.d.ts
src/components/: ActionButtonsCell.vue  ActionsPlayHeader.vue  AsrModal.vue  BaseModal.vue  BulkSetSpeakerDialog.vue  CaptionTable.speakerSimilarity.test.ts  CaptionTable.vue  ColumnManager.vue  ConfirmAsrDialog.vue  ConfirmDeleteDialog.test.ts  ConfirmDeleteDialog.vue  ContextMenu.test.ts  ContextMenu.vue  FileDropZone.test.ts  FileDropZone.vue  GenericAlertDialog.vue  GenericConfirmDialog.vue  LicenseAgreementDialog.vue  MediaPlayer.vue  MenuBar.vue  RemuxMp3Dialog.vue  RenameSpeakerDialog.vue  SpeakerNameCellEditor.vue  SpeakerNameInput.vue  StarRatingCell.test.ts  StarRatingCell.vue  VerifiedCheckCell.vue
src/stores/: captionStore.sequential.test.ts  captionStore.test.ts  captionStore.ts  vttStore.sequential.test.ts  vttStore.test.ts  vttStore.ts
src/types/: electron.d.ts  schema.ts  vtt.ts
src/utils/: captionGridDebug.test.ts  captionGridDebug.ts  captionsDocument.test.ts  captionsDocument.ts  captionsDocument.wordRealignment.test.ts  captionsJson.ts  captionsJson.uiState.test.ts  captionsJson5.ts  (+25 more)
test_data/: 100-cues.vtt  100s-silence.vtt  OSR_us_000_0010_8k.embeddings.db  OSR_us_000_0010_8k.vtt  OSR_us_000_0010_8k.webm  about-time-speaker-regression.captions_json5  duplicate-uuids.vtt  generate-100-cues.ts  generate-100-segments.ts  no-media-reference.vtt  partial-embeddings.vtt  sample.vtt  sample_with_words.vtt  test.vtt  with-media-reference.captions.json  with-media-reference.vtt
tests/: auto-scroll.spec.ts  bulk-delete.spec.ts  bulk-set-speaker.spec.ts  caption-editor.spec.ts  caption-interactions.spec.ts  comprehensive-e2e.spec.ts  context-menu.spec.ts  continuous-playback.spec.ts  file-drop.spec.ts  media-seek-test.spec.ts  merge-adjacent-segments.spec.ts  playhead-scrubbar-table.spec.ts  playhead-simple.spec.ts  rename-speaker.spec.ts  scrub-bar-navigation.spec.ts  selection-targeting.spec.ts  shift-click-multi-select.spec.ts  speaker-autocomplete.spec.ts  speaker-name-edit-focus.spec.ts  timestamp-edit-keys.spec.ts  vtt-editor.spec.ts  vtt-interactions.spec.ts  vtt-media-autoload.spec.ts  word-split.spec.ts
transcribe/: MANIFEST.in  README.md  asr_results_to_captions.py  asr_results_to_captions_post_processing_pipeline_test.py  asr_results_to_captions_test.py  asr_results_to_vtt.py  asr_results_to_vtt_post_processing_pipeline_test.py  asr_results_to_vtt_test.py  audio_utils.py  bulk_cli.py  bulk_cli_test.py  captions_json5_lib.py  captions_json5_lib_test.py  captions_json_lib.py  capture_parakeet_raw_asr_output.py  capture_raw_asr_output.py  conftest.py  constants.py  embed.py  embed_cli.py  embed_cli_test.py  inspect_word_timestamps.py  overrides.txt  pyproject.toml  pytest.ini  recognizer.py  remux_mp3_test.py  repo_root.py  schema.py  snapshot_test_utils.py  transcribe.py  transcribe_cli.py  transcribe_cli_apollo_test.py  transcribe_cli_test.py  vibevoice_modal.py  vtt_lib.py
transcribe/__snapshots__/: embed_cli_test.ambr  test_asr_post_processing_pipeline[parakeet-10].ambr  test_asr_post_processing_pipeline[parakeet-60].ambr  test_asr_post_processing_pipeline[whisper-10].ambr  test_asr_post_processing_pipeline[whisper-60].ambr  transcribe_cli_apollo_test.ambr  transcribe_cli_test.ambr
transcribe/diarization/: cli.py  embed.py
transcribe/test_data/: sample_with_words.vtt
transcribe/test_fixtures/: FINDINGS.md  parakeet_chunked_10s_raw_output.json  parakeet_chunked_60s_raw_output.json  parakeet_full_file_raw_output.json  whisper_chunked_10s_raw_output.json  whisper_chunked_20s_raw_output.json  whisper_chunked_60s_raw_output.json  whisper_chunked_raw_output.json  whisper_full_file_raw_output.json
transcribe/tests/: __init__.py  test_diarization.py  test_embed.py  test_post_processing_pipeline.py  test_speaker_clustering.py  test_transcribe.py  test_vtt_lib.py
transcribe/tests/__snapshots__/: test_asr_post_processing_pipeline[whisper-10].ambr  test_diarization.ambr  test_embed.ambr  test_post_processing_pipeline.ambr  test_speaker_clustering.ambr  test_transcribe.ambr  test_vtt_lib.ambr
(+51 files in other folders)
