[project]
name = "caption-editor-transcribe"
version = "0.1.0"
description = "Transcription and speaker embedding tools for Caption Editor"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic>=2.0",
    "soundfile",
    "torch",
    "typer",
    "tqdm",
]

[project.optional-dependencies]
nemo = ["nemo_toolkit[asr]"]
transformers = ["transformers"]
embed = ["pyannote.audio"]
dev = ["pytest", "pytest-snapshot", "mypy"]

[project.scripts]
transcribe = "transcribe:app"
embed = "embed:app"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "expensive: marks tests as expensive/slow (deselect with '-m \"not expensive\"')",
]
